--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $main-height: calc(100vh - #{$topbar-height});
+$topbar2-height: 75px;
 
 body{
   height: 100vh;
@@ -12,9 +13,9 @@ nav.main{
 
   min-width: 100%;
 
-  > *{
-    @include grid-column(6);
-  }
+  > *{ @include grid-column($total-columns/2); }
+  
+  * { margin: 0; }
 
   ul{
     list-style-type: none;
@@ -29,11 +30,12 @@ nav.main{
 nav:not(.main){
   background-color: $silver;
   color: $jet;
-  height: 75px;
+  height: $topbar2-height;
 }
 
 main{
   margin-top: $topbar-height;
+  &.with-nav2{ margin-top: $topbar-height + $topbar2-height; }
 }
 
 .body-with-side-bar{
@@ -42,12 +44,12 @@ main{
   min-width: 100%;
 
   .side-bar{
-    @include grid-column(3);
+    @include grid-column($total-columns/4);
     // a{position: fixed;}
   }
-  .body{@include grid-column(9);}
+  .body{@include grid-column($total-columns*3/4);}
 }
 
 @media #{$small-only}{
-  .body-with-side-bar{ .side-bar, .body{ @include grid-column(12); } }
+  .body-with-side-bar{ .side-bar, .body{ @include grid-column($total-columns); } }
 }
